--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
     <!-- Kontak -->
     <footer id="kontak">
-      <p>&copy; Copyright by <span>Bachtiar Fazal Alam</span> 2025</p>
+      <p>&copy; Copyright by <span>Bachtiar Fazal Alam</span> 2025 <br/> Inspired by Ngoding Mastery</p>
       <div class="social">
         <a href="#">
           <i class="fa-brands fa-square-instagram"></i>
@@ -330,3 +330,4 @@
     <!-- Animated on Scroll -->
   </body>
 </html>
+
